# fast_zero

./: .gitignore  Dockerfile  compose.yaml  database.db  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/versions/: 1f457c285b7b_create_users_table.py  8c4444997616_create_todos_table.py  fc01c0b836bc_add_update_at_in_users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
